<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/home"
    android:layout_marginTop="57dp"
    android:background="@color/Drawer1"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">
    <RelativeLayout


        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clg_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:textColor="@color/Red"
            android:background="@color/Drawer1"
            android:textAlignment="center"
            android:id="@+id/clg_name"/>
        <ImageView
            android:layout_width="385sp"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:id="@+id/clg_img"
            android:src="@drawable/ic_collegeimg"
            android:contentDescription="@string/clg_img"
            android:layout_below="@+id/clg_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clg_img"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/slogan"
            android:gravity="center"
            android:text="@string/slogan"/>
        <WebView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:background="@android:color/transparent"
            android:textSize="19sp"
            android:textColor="@color/Black"
            android:gravity="center_horizontal"
            android:layout_below="@+id/slogan"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Courses_offered"
            android:layout_below="@id/text1"
            android:text="Courses offered:"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/Red"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Courses_offered"
            android:textColor="@color/Black"
            android:textSize="24sp"
            android:id="@+id/Under_graduate"
            android:text="Under graduate courses(4 years):"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_below="@+id/Under_graduate"
            android:divider="@null"
            android:id="@+id/ug_course_list"
            android:background="@color/Drawer1"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ug_course_list"
            android:textColor="@color/Black"
            android:textSize="24sp"
            android:id="@+id/Post_graduate"
            android:text="Post graduate courses(2 years):"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_below="@+id/Post_graduate"
            android:divider="@null"
            android:id="@+id/pg_course_list"
            android:background="@color/Drawer1"/>

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:id="@+id/imageanimation"
            android:src="@mipmap/ic_arrow"
            android:layout_below="@+id/clg_img"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>


</ScrollView>
